force-app/main/default/objects/Dispense__c/Dispense__c.object-meta.xml
<CustomObject>
    <label>Dispense</label>
    <nameField>
        <displayFormat>DISP-{0000}</displayFormat>
        <label>Dispense</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispense</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>