force-app/main/default/objects/Dispense__c/fields/Compliance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Flag</label>
    <type>Checkbox</type>
</CustomField>