force-app/main/default/objects/Dispense__c/fields/Dispensed_By__c.field-meta.xml
<CustomField>
    <fullName>Dispensed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispensed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Dispensed By</relationshipLabel>
    <relationshipName>Dispensed_By_Users</relationshipName>
    <type>Lookup</type>
</CustomField>