force-app/main/default/objects/Dispense__c/fields/Dispensed_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispensed_Date__c</fullName>
    <label>Dispensed Date</label>
    <type>Date</type>
</CustomField>