force-app/main/default/objects/Dispense__c/fields/Dispensed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Dispensed_Quantity__c</fullName>
    <label>Dispensed Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>