force-app/main/default/objects/Dispense__c/fields/Drug_Batch__c.field-meta.xml
<CustomField>
    <fullName>Drug_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drug Batch</label>
    <referenceTo>Drug_Batch__c</referenceTo>
    <relationshipLabel>Drug Batches</relationshipLabel>
    <relationshipName>DR</relationshipName>
    <type>Lookup</type>
</CustomField>