force-app/main/default/objects/Dispense__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>