force-app/main/default/objects/Dispense__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <label>Prescription</label>
    <referenceTo>Prescription__c</referenceTo>
    <relationshipLabel>Dispense</relationshipLabel>
    <relationshipName>Dispense</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>