force-app/main/default/objects/Dispense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dispensed_Quantity__c</columns>
    <columns>Dispensed_Date__c</columns>
    <columns>Compliance_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>